# fortranc-rs

./: Cargo.toml  readme.md
dev-tools/fortranc-test/: Cargo.toml  build.rs
dev-tools/fortranc-test/src/: bar1.f90  bar2.f90  foo.f90  lib.rs
dev-tools/fortranc-test/tests/: all.rs
dev-tools/gen-windows-sys-binding/: Cargo.toml
dev-tools/gen-windows-sys-binding/src/: main.rs
src/: command_helper.rs  detect_compiler_family.f90  flags.rs  lib.rs  target.rs  tempfile.rs  tool.rs  utilities.rs
src/parallel/: job_token.rs
src/windows/: find_tools.rs  mod.rs
