[package]
name = "fortranc"
version = "0.1.0"
edition = "2021"

[dependencies]
jobserver = { version = "0.1.30", default-features = false, optional = true }
shlex = "1.3.0"


[target.'cfg(unix)'.dependencies]
# Don't turn on the feature "std" for this, see https://github.com/rust-lang/cargo/issues/4866
# which is still an issue with `resolver = "1"`.
libc = { version = "0.2.62", default-features = false, optional = true }


[features]
parallel = ["dep:libc", "dep:jobserver"]
# This is a placeholder feature for people who incorrectly used `fortranc` with `features = ["jobserver"]`
# so that they aren't broken. This has never enabled `parallel`, so we won't do that.
jobserver = []


[dev-dependencies]
tempfile = "3"
